Closed Bug 1912778 Opened 1 year ago Closed 1 year ago

Missing device list changes once camera backend is initialized

Categories

(Core :: WebRTC: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox132 --- fixed

People

(Reporter: jgrulich, Assigned: jgrulich)

Details

Attachments

(1 file)

With the introduction of PipeWire camera backend we introduced "initialized" state of the camera backend. We could assume with V4L2 the backend is always initialized, but with PipeWire the initialization can go through a permission dialog and therefore we can only intialize it with the right permission. After the backend is initialized, we re-create DeviceInfo (class providing information about camera devices) as with the PipeWire backend we might end up before just with DeviceInfo providing a placeholder device. Once this DeviceInfo is re-created, we now miss to register callback for changes in the device list as this happens only in the VideoEngine initialization.

Make sure to always register video input feedback when a new DeviceInfo
is created. There is now just one place where DeviceInfo gets created
and the logic for video input feedback registration has been moved to
VideoEngine as it's the only place where we now when a new DeviceInfo is
created.

Assignee: nobody → jgrulich
Status: NEW → ASSIGNED
Component: Audio/Video → WebRTC: Audio/Video

The severity field is not set for this bug.
:jib, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(jib)
Severity: -- → S3
Flags: needinfo?(jib)
Pushed by jgrulich@redhat.com: https://hg.mozilla.org/integration/autoland/rev/a05909b43a51 Always register video input feedback for newly created DeviceInfo r=pehrsons
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: